<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_Recipe" Id="{b0bdeb96-9639-4e29-adef-e5f61d1b4c3b}">
    <Declaration><![CDATA[TYPE ST_Recipe :
STRUCT
	//chargerSetpoint 	: REAL := 100;  
	currentSetpoint 	: REAL;   
	CoilEnable 			: BOOL := TRUE;
	CurrentDuration		: REAL := 3.7;   
	TriggerTime			: REAL; 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>