<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="Cal_ChargeTime" Id="{67cff245-1631-4be3-b35e-eb270cd92970}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Cal_ChargeTime
VAR
	chargetimeCal : ARRAY [1..10] OF ChargeTimeCal;
	Tuntilfullycharged : ARRAY [1..10] OF REAL;
	i : INT := 1;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
FOR i := 1 TO 10 BY 1 DO
	chargetimeCal[i] (I_setpoint := setpoints.Coil[i].Recipe.currentSetpoint, 
					t_duration := setpoints.Coil[i].Recipe.CurrentDuration, 
					NumOfCaps := setpoints.Coil[i].SysParameters.NumOfCaps,
					C_percap := setpoints.Coil[i].SysParameters.CapacitancePerCap,
					VMAXperCap := setpoints.Coil[i].SysParameters.MaxVoltagePerCap,
					R_coil := setpoints.Coil[i].SysParameters.TotalCircuitResistance,
					L_coil := 0.5,
					VMAXcharger := 1500,
					Pcharger := 15000,
					NumOfCharger := 4);
				
Tuntilfullycharged[i] := chargetimeCal[i].Tuntilfullcharge;
END_FOR;

IF i > 10 THEN 
	i := 1;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="Cal_ChargeTime">
      <LineId Id="26" Count="1" />
      <LineId Id="5" Count="0" />
      <LineId Id="8" Count="1" />
      <LineId Id="11" Count="4" />
      <LineId Id="17" Count="3" />
      <LineId Id="23" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="24" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>